@@ -7,3 +7,8 @@
 - Scene Builder
 ## JavaFX Setup (non-modular):
 https://openjfx.io/openjfx-docs/
+## Notes:
+- Use this VM arguments instead of the one provided in the above link:\
+*--module-path "\path\to\javafx-sdk-22.0.1\lib" --add-modules javafx.base,javafx.controls,javafx.fxml,javafx.graphics,javafx.media,javafx.swing*
+- Replace *\path\to\javafx-sdk-22.0.1\lib* with the actual path to your javafx lib location
+  
